src/objects/Abuser__c.object
<CustomObject>
    <fields>
        <fullName>CarColor__c</fullName>
        <label>Car Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarMake__c</fullName>
        <label>Car Make</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarModel__c</fullName>
        <label>Car Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarState__c</fullName>
        <label>Car Tag State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarStyle__c</fullName>
        <inlineHelpText>Truck, SUV, 2 door car, 4 door car, etc.</inlineHelpText>
        <label>Car Style</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarYear__c</fullName>
        <label>Car Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>Cell Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Adair</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Atoka</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Beckham</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Bryan</fullName>
                </value>
                <value>
                    <fullName>Caddo</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Carter</fullName>
                </value>
                <value>
                    <fullName>Cherokee</fullName>
                </value>
                <value>
                    <fullName>Choctaw</fullName>
                </value>
                <value>
                    <fullName>Cimarron</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Comanche</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Craig</fullName>
                </value>
                <value>
                    <fullName>Creek</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dewey</fullName>
                </value>
                <value>
                    <fullName>Ellis</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Garvin</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greer</fullName>
                </value>
                <value>
                    <fullName>Harmon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CriminalConvictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Criminal Convictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployerName__c</fullName>
        <label>Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EyeColorPick__c</fullName>
        <label>Eye Color Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Hazel</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EyeColor__c</fullName>
        <label>Eye Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacialHair__c</fullName>
        <label>Facial Hair</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Mustache</fullName>
                </value>
                <value>
                    <fullName>Goatee</fullName>
                </value>
                <value>
                    <fullName>Beard</fullName>
                </value>
                <value>
                    <fullName>Long Beard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glasses__c</fullName>
        <label>Glasses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HairColorLength__c</fullName>
        <label>Hair Color/Length</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HairColorPick__c</fullName>
        <label>Hair Color Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bald</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blonde or Strawberry</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Gray or Partially Gray</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Red or Auburn</fullName>
                </value>
                <value>
                    <fullName>Sandy</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HairLength__c</fullName>
        <label>Hair Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short hair</fullName>
                </value>
                <value>
                    <fullName>Average length</fullName>
                </value>
                <value>
                    <fullName>Shoulder length</fullName>
                </value>
                <value>
                    <fullName>Long hair</fullName>
                </value>
                <value>
                    <fullName>Bald or Shaved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifyingFeatures__c</fullName>
        <label>Identifying Features</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkToIntake__c</fullName>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Abusers</relationshipLabel>
        <relationshipName>Abusers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <label>Mailing Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStatePick__c</fullName>
        <label>Mailing State Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingZip__c</fullName>
        <label>Mailing Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedicalConditions__c</fullName>
        <label>Medical Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wheel chair</fullName>
                </value>
                <value>
                    <fullName>Crutches</fullName>
                </value>
                <value>
                    <fullName>Prosthetic arm/hand</fullName>
                </value>
                <value>
                    <fullName>Prosthetic leg/foot</fullName>
                </value>
                <value>
                    <fullName>Missing arm/hand</fullName>
                </value>
                <value>
                    <fullName>Missing leg/foot</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissingTeeth__c</fullName>
        <label>Missing Teeth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teeth missing on the Top Row</fullName>
                </value>
                <value>
                    <fullName>Teeth Missing on the Bottom Row</fullName>
                </value>
                <value>
                    <fullName>Teeth Missing on both the Top and Bottom Rows</fullName>
                </value>
                <value>
                    <fullName>Missing teeth are not visible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalAddress__c</fullName>
        <label>Physical Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalCity__c</fullName>
        <label>Physical City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalStatePick__c</fullName>
        <label>Physical State Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalZip__c</fullName>
        <label>Physical Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Parole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Probation or Parole?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RaceEthnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RaceEthnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Ex-spouse</fullName>
                </value>
                <value>
                    <fullName>Boyfriend</fullName>
                </value>
                <value>
                    <fullName>Girlfriend</fullName>
                </value>
                <value>
                    <fullName>Ex-Partner</fullName>
                </value>
                <value>
                    <fullName>Stranger</fullName>
                </value>
                <value>
                    <fullName>Roommate</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Acquaintance</fullName>
                </value>
                <value>
                    <fullName>Classmate/Colleague</fullName>
                </value>
                <value>
                    <fullName>Other Family Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScarsMarksTattoos__c</fullName>
        <label>Scars, Marks, or Tattoos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfAbuseOther__c</fullName>
        <label>Type Of Abuse Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfAbuse__c</fullName>
        <label>Type Of Abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Sexual</fullName>
                </value>
                <value>
                    <fullName>Emotional</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Economic/Financial</fullName>
                </value>
                <value>
                    <fullName>Reproductive</fullName>
                </value>
                <value>
                    <fullName>Cultural</fullName>
                </value>
                <value>
                    <fullName>Stalking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeaponType__c</fullName>
        <label>Weapon Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weapon__c</fullName>
        <label>Weapon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkAddress__c</fullName>
        <label>Work Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkCity__c</fullName>
        <label>Work City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WorkSchedule__c</fullName>
        <label>Work Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WorkState__c</fullName>
        <label>Work State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Zip_Code__c</fullName>
        <label>Work Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Abuser</label>
    <nameField>
        <displayFormat>Abuser - {0000000}</displayFormat>
        <label>Abuser</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abusers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>